--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 }
 
 #navbar__logo img{
-    /* height: 70%; */
+    height: 100%;
     padding-top: .5rem;
     width: 100%;
     display: flex;
@@ -68,21 +68,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 1rem;
+    padding: 0 .4rem;
     width: 100% ;
 }
 
- .button{
+.quote{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
-    padding: 10px 20px;
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    /* width: 10%; */
+    background: #fcb045;
+    color: #fff;
+    font-size: 1.2rem;
+    margin: auto 0;
+    font-weight: 500;
+} 
+.button{
+    padding: 10px 10px;
+    /* height: 100%; */
+    /* width: 100%; */
     border: none;
     outline: none;
-    border-radius: 4px;
+    text-decoration: none;
+    border-radius: 4%;
     background: #fcb045;
     color: #fff;
     transition: all .3s ease;
